# crestrail

./: .gitignore  ADMIN_GUIDE.md  API_EXAMPLES.md  ARCHITECTURE.md  AUTH_GUIDE.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_TEST.sh  README.md  ROADMAP.md  SETUP.md  STAGE1_SUMMARY.md  START_HERE.md  TEST_ADMIN.md  create_admin_user.sql  init_multitenant.sql  set_superadmin.sql  多租户配置指南.md
examples/: auth_examples.sh  frontend-demo.html  react-example.jsx  schema.sql  test-api.sh  transaction_examples.sh
frontend-nextjs/: QUICK_START.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  test-api.html
frontend-nextjs/app/: globals.css  layout.tsx  page.tsx
frontend-nextjs/app/dashboard/: layout.tsx  page.tsx
frontend-nextjs/app/dashboard/connections/: page.tsx
frontend-nextjs/app/dashboard/query/: page.tsx
frontend-nextjs/app/login/: page.tsx
frontend-nextjs/app/test/: page.tsx
frontend-nextjs/components/: ConnectionWarning.tsx  DatabaseSelector.tsx  ERDiagram.tsx  Header.tsx  Notification.tsx  SchemaSelector.tsx  Sidebar.tsx  SidebarV2.tsx  SidebarV3.tsx  TenantConnectionSelector.tsx
frontend-nextjs/lib/: api.ts  store.ts  utils.ts
migrations/: 001_create_users_table.sql  002_create_example_tables.sql  003_create_management_schema.sql  004_add_superadmin_role.sql  demo_er_with_foreign_keys.sql  fix_users_table.sql
scripts/: setup_multi_tenant.sql
src/: admin_handlers.rs  auth.rs  auth_handlers.rs  config.rs  db.rs  error.rs  export_handlers.rs  handlers.rs  main.rs  middleware.rs  models.rs  monitor_handlers.rs  pool_manager.rs  query_builder.rs  schema_handlers.rs  tenant_handlers.rs  tenant_models.rs  transaction.rs
(+4 files in other folders)
