[package]
name = "crestrail"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "time", "macros"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 环境变量
dotenv = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 认证和安全
jsonwebtoken = "9.2"
bcrypt = "0.15"
once_cell = "1.19"

# 验证
validator = { version = "0.18", features = ["derive"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "crestrail"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "migrate_examples"
path = "src/bin/migrate_examples.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

